French translation for first 2 chapters of case study paper

--- a/caseStudyWP_FN/01-chap1.Rmd
+++ b/caseStudyWP_FN/01-chap1.Rmd
@@ -1,33 +1,23 @@
 # INTRODUCTION
+En vertu des récentes modifications apportées à la *Loi sur les pêches* du Canada, des points de référence limite (PRL) seront requis pour tous les grands stocks de poissons prescrits par règlement. Si un grand stock de poisson tombe sous son PRL, il faudra élaborer un plan de rétablissement. Pour les saumons du Pacifique, on prévoit qu’il y aura plus de 65 grands stocks de poissons (ou unités de gestion des stocks, UGS). La définition fonctionnelle proposée pour une UGS est la suivante : une ou plusieurs unités de conservation (UC) telles que définies dans la Politique concernant le saumon sauvage (PSS) qui sont gérées conjointement avec l’objectif d’atteindre un état commun. Les PRL n’ont pas encore été élaborés à l’échelle de l’UGS pour les saumons du Pacifique. Le présent document de travail résume l’application des méthodes d’estimation des PRL pour trois UGS dans le cadre d’études de cas sur des saumons du Pacifique. Ces applications ont servi à éclairer l’élaboration de lignes directrices concernant la détermination des PRL pour les saumons du Pacifique, qui sont présentées dans le document d’accompagnement préparé par @holtGuidelinesDefiningLimitInpress.  
+
+Bien que des PRL soient requis à l’échelle de l’UGS en vertu de la *Loi sur les pêches*, la surveillance et la gestion prévues par la PSS du ministère des Pêches et des Océans (MPO) se font à l’échelle plus petite de l’UC. Dans la PSS, une UC est définie comme « un groupe de saumon sauvage suffisamment isolé des autres groupes que, s’il venait à disparaître, il est peu probable qu’il puisse être rétabli naturellement dans un certain délai, à savoir une vie humaine ou un nombre spécifique de générations de saumon » [@dfoCanadaPolicyConservation2005]. Des méthodes d’évaluation de l’état des UC ont été déterminées pour un éventail de types de données, y compris les méthodes d’évaluation intégrée selon la PSS (ci-après appelées « évaluations selon la PSS ») pour lesquelles on a recours à l’opinion d’experts afin de combiner plusieurs paramètres en une seule estimation de l’état des UC [p. ex., @grant2017FraserSockeye2020]. Les paramètres utilisés pour évaluer l’état des UC selon la PSS comprennent l’abondance des géniteurs, les tendances à court et à long terme de l’abondance, et la répartition de l’abondance [@holtIndicatorsStatusBenchmarks2009]. Les points de référence inférieurs et supérieurs de ces paramètres sont utilisés pour classer l’état dans l’une des trois zones (verte, ambre et rouge) qui représentent des populations de plus en plus épuisées nécessitant une intervention de gestion accrue [@dfoCanadaPolicyConservation2005]. Une description plus complète de ces concepts est présentée dans @holtGuidelinesDefiningLimitInpress.
+
+Les PRL sont définis dans le Cadre décisionnel pour les pêches en conformité avec l’approche de précaution du MPO comme étant l’état d’un stock au-dessous duquel il risque de subir de graves dommages [@dfoFisheryDecisionmakingFramework2009]. Bien que les PRL soient souvent fondés sur des paramètres directement liés à la productivité, comme la biomasse du stock reproducteur ou le taux de mortalité par pêche, le type de paramètre utilisé pour définir un PRL peut varier selon l’espèce et le type de donnée, et peut être lié à d’autres caractéristiques du stock, le cas échéant. Étant donné que l’UC est l’unité fondamentale de la biodiversité que le MPO vise à maintenir dans le cadre de la PSS, il s’ensuit que les paramètres utilisés pour établir les PRL pour les saumons du Pacifique doivent être liés à l’état des UC qui font partie d’une UGS. Dans notre document d’accompagnement [@holtGuidelinesDefiningLimitInpress], nous affirmons que le maintien de l’abondance des géniteurs à l’échelle de l’UC au-dessus des niveaux qui causeraient des dommages graves est la principale exigence biologique pour les PRL des saumons du Pacifique.
 
 
-Under recent amendments to Canada's *Fisheries Act*, Limit Reference Points (LRPs) will be required for all major fish stocks prescribed in regulation. Stocks that drop below their LRP will trigger the development of a rebuilding plan. For Pacific salmon, it is anticipated there will be more than 65 major fish stocks (or stock management units, SMUs), where the proposed functional definition of a SMU is a group of one or more Wild Salmon Policy (WSP) Conservation Units (CUs) that are managed together with the objective of achieving a joint status. LRPs have not yet been developed at the SMU-level for Pacific Salmon. This working paper summarizes the application of methods for estimating SMU-level LRPs to three Pacific salmon case study SMUs. These case study applications have been used to inform the development of guidelines for identifying LRPs for Pacific Salmon, which are presented in the companion paper by @holtGuidelinesDefiningLimitInpress.  
+Les objectifs précis de ce document de travail sont les suivants.
 
+– Appliquer les méthodes proposées pour déterminer les PRL dans le cadre d’études de cas sur des saumons du Pacifique pour un éventail de types et de quantités de données.
+– Évaluer les méthodes de détermination des PRL à l’aide d’une combinaison d’analyses de sensibilité fondées sur les principaux paramètres et hypothèses et, si possible, d’analyses rétrospectives.
 
-While LRPs under the *Fisheries Act* are required at the SMU-level, monitoring and management under DFO's WSP occurs at the finer CU level. Under the WSP, a CU is defined as ‘a group of wild salmon sufficiently isolated from other groups that, if lost, is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations’ [@dfoCanadaPolicyConservation2005].  Methods to assess CU status have been identified for a range of data types, including WSP Integrated Assessment methods (hereafter called 'WSP assessments') that use expert opinion to combine multiple metrics into a single estimate of CU status [e.g., @grant2017FraserSockeye2020]. Metrics used to assess WSP CU status include spawner abundances, short- and long-term trends in abundance, and distribution of abundance [@holtIndicatorsStatusBenchmarks2009]. Lower and upper benchmarks on those metrics are used to assign status into one of three zones, with the zones Green, Amber and Red, representing increasingly depleted populations that require increasing management intervention [@dfoCanadaPolicyConservation2005]. A more fulsome description of these concepts is provided in @holtGuidelinesDefiningLimitInpress.
+Une évaluation complète des PRL au moyen d’une simulation en boucle fermée dépasse la portée du projet actuel. Ce type d’évaluation est hautement prioritaire pour les recherches futures. 
 
+Les études de cas examinées sont les suivantes :
+1)	saumon coho (*Oncorhynchus kisutch*) du Fraser intérieur;
+2)	saumon chinook (*O. tshawytscha*) de la côte ouest de l’île de Vancouver (COIV);
+3)	saumon kéta (*O. keta*) de la côte sud intérieure, à l’exclusion des UC du fleuve Fraser.
 
-LRPs are defined within DFO's 'Precautionary Approach to Fisheries Decision-Making' as the stock status below which serious harm is expected to occur to the stock [@dfoFisheryDecisionmakingFramework2009]. While LRPs are often based on metrics directly linked to productivity, such as spawning biomass or fishing mortality rates, the type of metric used to define an LRP can vary among species and data types, and may be related to other stock characteristics when appropriate. Since the CU is the fundamental unit of biodiversity that DFO aims to maintain under the WSP, it follows that metrics used to set LRPs for Pacific salmon should be linked to the status of component CUs within an SMU. Our companion paper [@holtGuidelinesDefiningLimitInpress] argues that the maintenance of CU-level spawning abundances above levels that would cause serious harm is the key biological requirement for Pacific salmon LRPs.
+Chacune de ces UGS est composée de trois à sept UC et a été sélectionnée pour représenter un niveau différent de quantité des données, allant des données abondantes (saumon coho du Fraser intérieur) aux données limitées (saumon kéta de la côte sud intérieure et saumon chinook de la COIV). Pour chaque étude de cas, l’ensemble des méthodes d’estimation des PRL considérées dépend des données disponibles et des méthodes d’évaluation déjà mises au point pour l’UGS. 
 
-
-The specific goals of this working paper are to:
-
-- apply proposed LRP methods to Pacific Salmon case studies over a range of data types and availabilities, and
-
-- evaluate methods for developing LRPs using a combination of sensitivity analyses to key parameters and assumptions, and where possible retrospective analyses.
-
-
-A full evaluation of LRPs using closed-loop simulation is beyond the scope of the current project. This type of evaluation is a high priority for future research. 
-
-The case studies considered include:
-
-1)	Interior Fraser Coho Salmon (*Oncorhynchus kisutch*)
-
-2)	West Coast Vancouver Island (WCVI) Chinook Salmon (*O. tshawytscha*), and 
-
-3)	Inside South Coast Chum Salmon (*O. keta*), excluding Fraser River CUs
-
-Each of these SMUs consists of 3-7 CUs and was selected to represent a different level of data availability ranging from data rich (Interior Fraser Coho) to data-limited (Inside South Coast Chum and West Coast Vancouver Island Chinook). For each case study, the set of LRP estimation methods considered is a function of available data and previously developed assessment methods for the SMU. 
-
-
-The LRPs presented in this paper are for illustrative purposes only, and not meant to provide formal LRP estimates. The development of LRPs to support implementation of the *Fisheries Act* will require a more thorough review of data and assumptions with local analysts and partners.  
+Ce document présente des PRL à titre indicatif seulement et ne vise pas à en fournir des estimations officielles. L’élaboration des PRL à l’appui de la mise en œuvre de la *Loi sur les pêches* nécessitera un examen plus approfondi des données et des hypothèses de concert avec des analystes et les partenaires locaux concernés.
